--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jotai": "^2.8.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-is": "18.3.1",
     "react-router-dom": "6.11.2",
     "styled-components": "5.3.6",
